--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
         </div>
       </div>
       <div class="row justify-content-center text center">
-        <div class="col-md-4">
-          <div class="card" style="width: 18rem;">
+        <div class="col-md-2">
+          <div class="card" style="width: 10rem;">
             <img src="TARAIRANI.JPG.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
@@ -94,8 +94,8 @@
             </div>
           </div>  
         </div>
-        <div class="col-md-4">
-          <div class="card" style="width: 18rem;">
+        <div class="col-md-2">
+          <div class="card" style="width: 10rem;">
             <img src="TARAIRANI.JPG.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Card title
@@ -103,8 +103,8 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="card" style="width: 18rem;">
+        <div class="col-md-2">
+          <div class="card" style="width: 10rem;">
             <img src="TARAIRANI.JPG.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
@@ -112,8 +112,8 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4">
-           <div class="card" style="width: 18rem;">
+        <div class="col-md-2">
+           <div class="card" style="width: 10rem;">
              <img src="TARAIRANI.JPG.jpg" class="card-img-top" alt="...">
              <div class="card-body">
                <h5 class="card-title">Card title</h5>
@@ -121,8 +121,8 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="card" style="width: 18rem;">
+        <div class="col-md-2">
+          <div class="card" style="width: 10rem;">
             <img src="TARAIRANI.JPG.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
@@ -157,6 +157,10 @@
       <div class="row text-center mb-4">
         <div class="col">
           <h2>Qoute</h2>
+          <div class="row justify-content-center text center">
+            <div class="col-md-4">
+              "Ada setitik cahaya di ujung terowongan gelap, maka teruslah melangkah"
+            </div>
 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#000b76" fill-opacity="1" d="M0,32L14.1,48C28.2,64,56,96,85,122.7C112.9,149,141,171,169,160C197.6,149,226,107,254,117.3C282.4,128,311,192,339,218.7C367.1,245,395,235,424,197.3C451.8,160,480,96,508,74.7C536.5,53,565,75,593,74.7C621.2,75,649,53,678,64C705.9,75,734,117,762,154.7C790.6,192,819,224,847,202.7C875.3,181,904,107,932,112C960,117,988,203,1016,213.3C1044.7,224,1073,160,1101,138.7C1129.4,117,1158,139,1186,160C1214.1,181,1242,203,1271,197.3C1298.8,192,1327,160,1355,154.7C1383.5,149,1412,171,1426,181.3L1440,192L1440,320L1425.9,320C1411.8,320,1384,320,1355,320C1327.1,320,1299,320,1271,320C1242.4,320,1214,320,1186,320C1157.6,320,1129,320,1101,320C1072.9,320,1045,320,1016,320C988.2,320,960,320,932,320C903.5,320,875,320,847,320C818.8,320,791,320,762,320C734.1,320,706,320,678,320C649.4,320,621,320,593,320C564.7,320,536,320,508,320C480,320,452,320,424,320C395.3,320,367,320,339,320C310.6,320,282,320,254,320C225.9,320,198,320,169,320C141.2,320,113,320,85,320C56.5,320,28,320,14,320L0,320Z"></path></svg>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
